--- a/contact-us.html
+++ b/contact-us.html
@@ -3,6 +3,8 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Enigma offers full service website design, marketing and seo optimization. ">
+  <meta name="robots" content="index, follow">
   <title>enigma</title>
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <link rel="stylesheet" href="assets/css/main.css">
@@ -44,6 +46,7 @@
         <p>Here at enigma we create around you, wanna learn more? contact us below!</p>
         <hr>
         <h1>say hello</h1>
+        <h3>814-314-9401  or</h3>
         <form action="https://formspree.io/davidchason@gmail.com" method="POST">
           <label for="name">Name*</label>
           <input type="text" name="name">
