--- a/contact-us.html
+++ b/contact-us.html
@@ -45,8 +45,21 @@
         <p>We get it, life is stressful. This dosen't mean your marketing and website have to be...</p>
         <p>Here at enigma we create around you, wanna learn more? contact us below!</p>
         <hr>
-        <h1>say hello</h1>
-        <h3>814-314-9401  or</h3>
+        <h1 class="rotate-sentence">
+            <span>say</span>
+            <div class="swap-words">
+              <span>hello</span>
+              <span>bonjour</span>
+              <span>namaste</span>
+              <span>hola</span>
+              <span>ciao</span>
+              <span>hallo</span>
+            </div>
+        </h1>
+
+        <h2>814-314-9401</h2>
+        <hr>
+        <h1>not a talker huh? fill the form out</h1>
         <form action="https://formspree.io/davidchason@gmail.com" method="POST">
           <label for="name">Name*</label>
           <input type="text" name="name">
