--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right">
             <li><a href="contact-us.html">Contact Us</a></li>
+            <li><a href="testomonials.html">Testomonials</li>
             <li><a href="partners.html">Partners</a></li>
             <li><a href="careers.html">Careers</a></li>
           </ul>
