Removed hotlink and added image to assets

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
       <div class="item active">
-        <img src="https://images.unsplash.com/photo-1476712395872-c2971d88beb7?dpr=1&auto=format&fit=crop&w=1500&h=1000&q=80&cs=tinysrgb&crop=" alt="...">
+        <img src="assets/img/landing-tree.jpg" alt="...">
       </div>
     </div>
   </div>
