--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -37,14 +38,61 @@
         </div>
       </div>
     </nav>
-<div class="container">
-  <div id="carousel-main" class="carousel slide" data-ride="carousel">
-    <!-- Wrapper for slides -->
+  </div>
+  <!--End nav and flud-container -->
+
+<div class="container-fluid">
+    <div class="row create-row">
+      <div class="container">
+        <div class="col-md-6">
+          <h1>Create Ideas.</h1>
+          <div class="sol-break"></div>
+          <h2>We have all the resources to bring your idea to life.</h2>
+        </div>
+        <div class="col-md-6">
+          <p>We believe that all great ideas come to life; when you have a team of fresh air. </p>
+          <div class="sol-listing-container">
+            <div class="sol-listing">
+              <ul>
+                <li>Wordpress Development</li>
+                <li>Front-End Development</li>
+                <li>Back-End Development</li>
+                <li>Full-Stack Development</li>
+                <li>Agile Development</li>
+                <li>Product Management</li>
+              </ul>
+            </div>
+            <div class="sol-listing">
+              <ul>
+                <li>Business Process Review</li>
+                <li>Network Operations</li>
+                <li>Marketing & Landing Pages</li>
+                <li>Managed Shared Hosting</li>
+                <li>Quality Assurance</li>
+                <li>Dev Ops</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row contact-row">
+      <div class="container">
+        <div class="col-md-12">
+          <h4>CREATE WITH US</h4>
+          <h1>hello@enigma-cl.com</h1>
+        </div>
+      </div>
+    </div>
+</div>
+
+</body>
+</html>
+
+<!--<div id="carousel-main" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner" role="listbox">
       <div class="item active">
         <img src="assets/img/landing-tree.jpg" alt="...">
       </div>
     </div>
-  </div>
-</div>
-</body>
+  </div>-->
