Updated portfolio samples, added text, etc

--- a/portfolio.html
+++ b/portfolio.html
@@ -32,6 +32,7 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right">
             <li><a href="contact-us.html">Contact Us</a></li>
+            <li><a href="portfolio.html">Portfolio</a></li>
             <li><a href="partners.html">Partners</a></li>
             <li><a href="careers.html">Careers</a></li>
           </ul>
@@ -50,30 +51,52 @@
       <div class="row">
         <div class="main_portfolio_content">
           <div class="col-md-offset-1 col-md-4 col-sm-4 col-xs-12 single_portfolio_text"> <!-- col-md-offset-1 -->
-            <img src="http://i.imgur.com/PUeaHfC.png" alt="" />
+            <img src="assets/img/portfolio/dash-sdk.png" alt="" />
             <div class="portfolio_images_overlay text-center">
-              <h6>Italian Source Mushroom</h6>
-              <p class="product_price">$12</p>
-              <a href="#" class="btn btn-primary">View Website</a>
+              <h6>Healthcare</h6>
+              <p class="product_price">Dash SDK</p>
+              <p class="description">Dash helps digital health companies become HIPAA compliant</p>
+              <a target="_blank" href="https://www.dashsdk.com/mobile.html" class="btn btn-primary">View Website</a>
             </div>
           </div>
           <div class="col-md-4 col-sm-4 col-xs-12 single_portfolio_text">
-            <img src="http://i.imgur.com/uX3g4Nl.png" alt="" />
+            <img src="assets/img/portfolio/we-are-here.png" alt="" />
             <div class="portfolio_images_overlay text-center">
-              <h6>Italian Source Mushroom</h6>
-              <p class="product_price">$12</p>
-              <a href="#" class="btn btn-primary">View Website</a>
+              <h6>Non-Profit</h6>
+              <p class="product_price">We Are Here</p>
+              <p class="description">Non-profit organization founded and championed by Alicia Keys</p>
+              <a target="_blank" href="http://weareheremovement.com/latest/" class="btn btn-primary">View Website</a>
             </div>
           </div>
           <div class="col-md-4 col-sm-4 col-xs-12 single_portfolio_text">
-            <img src="http://i.imgur.com/8cOtAS9.png" alt="" />
+            <img src="assets/img/portfolio/pfm.png" alt="" />
             <div class="portfolio_images_overlay text-center">
-              <h6>Italian Source Mushroom</h6>
-              <p class="product_price">$12</p>
-              <a href="#" class="btn btn-primary">View Website</a>
+              <h6>Retail</h6>
+              <p class="product_price">Pumps For Mom</p>
+              <p class="description">Company offering breastfeeding equipment paid through insurance</p>
+              <a target="_blank" href="http://pumpsformom.com/" class="btn btn-primary">View Website</a>
             </div>
           </div>
-          <div class="col-md-offset-2 col-md-4 col-sm-4 col-xs-12 single_portfolio_text"> <!-- col-md-offset-2 -->
+
+          <div class="col-md-11 col-sm-12 col-xs-12">
+            <div class="industries text-right">
+              <h3>Startups &middot; Retail/Ecommerce &middot; Healthcare &middot; Non-Profit</h3>
+              <h3>Enterprise &middot; Entertainment &middot; SaaS &middot; Personal</h3>
+            </div>
+          </div>
+
+
+
+          <div class="col-md-11 col-sm-12 col-xs-12"> <!-- col-md-offset-1 -->
+            <br><br>
+            <div class="phrase text-right">
+              <h3>We've worked with organizations of all backgrounds. </h3>
+              <h3>Let's build something great together. </h3>
+            </div>
+          </div>
+
+          <!--
+          <div class="col-md-offset-2 col-md-4 col-sm-4 col-xs-12 single_portfolio_text"> <!-- col-md-offset-2 ->
             <img src="http://i.imgur.com/p7OYoBT.png" alt="" />
             <div class="portfolio_images_overlay text-center">
               <h6>Italian Source Mushroom</h6>
@@ -97,6 +120,7 @@
               <a href="#" class="btn btn-primary">View Website</a>
             </div>
           </div>
+          -->
           <!--
           <div class="col-md-4 col-sm-4 col-xs-12 single_portfolio_text">
             <img src="http://i.imgur.com/PUeaHfC.png" alt="" />
