--- a/careers.html
+++ b/careers.html
@@ -14,7 +14,7 @@
 
 <body>
   <div class="container-fluid">
-    <nav class="navbar navbar-default">
+    <nav class="navbar-inv navbar-default">
       <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
@@ -30,7 +30,7 @@
         </div>
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav navbar-right">
+          <ul class="nav navbar-nav navbar-right navbar-right-inv">
             <li><a href="contact-us.html">Contact Us</a></li>
             <li><a href="partners.html">Partners</a></li>
             <li><a href="careers.html">Careers</a></li>
