--- a/index.html
+++ b/index.html
@@ -6,43 +6,63 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Enigma offers full service website design, marketing and seo optimization. ">
   <meta name="robots" content="index, follow">
-  <title>enigma</title>
+  <title>ENIGMA | Creative Agency</title>
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/main.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 </head>
 
 <body>
-  <div class="container-fluid">
-    <nav class="navbar navbar-default">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <div class="logo-swap">
-          <a class="navbar-brand" href="/">enigma</a>
-          <a class="navbar-brand-2" href="/">%?!*^&</a>
-        </div>
-        </div>
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="contact-us.html">Contact Us</a></li>
-            <li><a href="partners.html">Partners</a></li>
-            <li><a href="careers.html">Careers</a></li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-  </div>
+
   <!--End nav and flud-container -->
 
+  <div class="homepage-hero-module">
+      <div class="video-container">
+          <div class="filter">
+            <div class="container">
+              <nav class="navbar navbar-default">
+                <div class="container-fluid">
+                  <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                      <span class="sr-only">Toggle navigation</span>
+                      <span class="icon-bar"></span>
+                      <span class="icon-bar"></span>
+                      <span class="icon-bar"></span>
+                    </button>
+                    <div class="logo-swap">
+                    <a class="navbar-brand" href="/">enigma</a>
+                    <a class="navbar-brand-2" href="/">%?!*^&</a>
+                  </div>
+                  </div>
+                  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav navbar-right">
+                      <li><a href="contact-us.html">Contact Us</a></li>
+                      <li><a href="partners.html">Partners</a></li>
+                      <li><a href="careers.html">Careers</a></li>
+                    </ul>
+                  </div>
+                </div>
+              </nav>
+              <div class="container">
+                <div class="dig-deep">
+                  <h2>Dig Deep</h2>
+                  <a href="#create-row"><i class="fa fa-arrow-circle-o-down fa-3x pulse animated" aria-hidden="true"></i></a>
+              </div>
+            </div>
+            </div>
+          </div>
+          <video autoplay loop class="fillWidth">
+              <source src="https://s3-us-west-2.amazonaws.com/coverr/mp4/Crossroad.mp4" type="video/mp4" />Your browser does not support the video tag. I suggest you upgrade your browser.
+          </video>
+      </div>
+  </div>
+
+
 <div class="container-fluid">
-    <div class="row create-row">
+    <div id="create-row" class="row create-row">
       <div class="container">
         <div class="col-md-6">
           <h1>Create Ideas.</h1>
@@ -88,11 +108,66 @@
 
 </body>
 </html>
+  <script>
+  //jQuery is required to run this code
+$( document ).ready(function() {
 
-<!--<div id="carousel-main" class="carousel slide" data-ride="carousel">
-    <div class="carousel-inner" role="listbox">
-      <div class="item active">
-        <img src="assets/img/landing-tree.jpg" alt="...">
-      </div>
-    </div>
-  </div>-->
+  scaleVideoContainer();
+
+  initBannerVideoSize('.video-container .poster img');
+  initBannerVideoSize('.video-container .filter');
+  initBannerVideoSize('.video-container video');
+
+  $(window).on('resize', function() {
+      scaleVideoContainer();
+      scaleBannerVideoSize('.video-container .poster img');
+      scaleBannerVideoSize('.video-container .filter');
+      scaleBannerVideoSize('.video-container video');
+  });
+
+});
+
+function scaleVideoContainer() {
+
+  var height = $(window).height() + 5;
+  var unitHeight = parseInt(height) + 'px';
+  $('.homepage-hero-module').css('height',unitHeight);
+
+}
+
+function initBannerVideoSize(element){
+
+  $(element).each(function(){
+      $(this).data('height', $(this).height());
+      $(this).data('width', $(this).width());
+  });
+
+  scaleBannerVideoSize(element);
+
+}
+
+function scaleBannerVideoSize(element){
+
+  var windowWidth = $(window).width(),
+  windowHeight = $(window).height() + 5,
+  videoWidth,
+  videoHeight;
+
+  $(element).each(function(){
+      var videoAspectRatio = $(this).data('height')/$(this).data('width');
+
+      $(this).width(windowWidth);
+
+      if(windowWidth < 1000){
+          videoHeight = windowHeight;
+          videoWidth = videoHeight / videoAspectRatio;
+          $(this).css({'margin-top' : 0, 'margin-left' : -(videoWidth - windowWidth) / 2 + 'px'});
+
+          $(this).width(videoWidth).height(videoHeight);
+      }
+
+      $('.homepage-hero-module .video-container video').addClass('fadeIn animated');
+
+  });
+}
+  </script>
